Refactor code formatting and correct minor issues
Refactored the code formatting in OpenAIRecords.java for better readability. Changed a string pattern in TTSRequest.java. Corrected the use of 'get(0)' to 'getFirst()' in the MistralController.java. Additionally, some minor spacing inconsistencies in TextToSpeechServiceTest.java were addressed.